// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryListItem should render properly on client side 1`] = `
"<li className=\\"list-group-item d-flex justify-content-between align-items-center\\">
  <Link href=\\"/repository/[...path]\\" as=\\"/repository/test\\">
    <a>
      test
    </a>
  </Link>
  <CopyToClipboard text=\\"git@host-from-browser:repos/test.git\\" onCopy={[Function: onCopy]} options={[undefined]}>
    <button className=\\"btn btn-outline-success btn-sm\\" onMouseOut={[Function: onMouseOut]}>
      Clone
    </button>
  </CopyToClipboard>
</li>"
`;

exports[`RepositoryListItem should render properly on server side 1`] = `
"<li className=\\"list-group-item d-flex justify-content-between align-items-center\\">
  <Link href=\\"/repository/[...path]\\" as=\\"/repository/test\\">
    <a>
      test
    </a>
  </Link>
  <CopyToClipboard text=\\"git@host-from-server:repos/test.git\\" onCopy={[Function: onCopy]} options={[undefined]}>
    <button className=\\"btn btn-outline-success btn-sm\\" onMouseOut={[Function: onMouseOut]}>
      Clone
    </button>
  </CopyToClipboard>
</li>"
`;
